Fix issue with standalone maps not spanning the entire visible viewport

--- a/global.css
+++ b/global.css
@@ -13,6 +13,11 @@ body {
   line-height: 1.5;
 }
 
+body > mapml-viewer:only-child,
+body > [is="web-map"]:only-child {
+  position: fixed;
+}
+
 
 /*
  * map viewers
